tests/sumo/errors/too_many_teleports/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (7ms).
Loading done.
Simulation version v1_7_0+1166-554a675755 started with time: 0.00
Simulation ended at time: 3100.00
Reason: Too many teleports.
Performance: 
 Duration: 0.11s
 Real time factor: 27193
 UPS: 3608315.789474
Vehicles: 
 Inserted: 297 (Loaded: 300)
 Running: 264
 Waiting: 3
Teleports: 6 (Jam: 6)

